# ChangeLog for dev-ruby/letter_opener
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/letter_opener/ChangeLog,v 1.3 2014/10/11 02:44:02 mrueg Exp $

  11 Oct 2014; Manuel Rüger <mrueg@gentoo.org> letter_opener-1.2.0.ebuild:
  Add ruby21 target.

  25 Jul 2014; Manuel Rüger <mrueg@gentoo.org> letter_opener-1.2.0.ebuild:
  Add ruby20 support.

*letter_opener-1.2.0 (13 Dec 2013)

  13 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +letter_opener-1.2.0.ebuild,
  +metadata.xml:
  Initial ebuild.