@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST letter_opener-1.2.0.tar.gz 8420 SHA256 dc7f3bb3a76e293ddef8c4c73b0e9d8e7ae8786fb4312918cd8c3debea5fb724 SHA512 003a04e194c9987669d780d01456564d4bd6fc34f8687185bfcd8191675d59e06d54691c8954b505bdd974cb24d875caa6b3c82b2e1d4f8e5fc475410f248885 WHIRLPOOL fd2a4035ad9156b4fba673d9360d75bec17eea240c0ffbd1e360fc99c819858d3e74385f15dffbafb65901556106e71dbf5ca0b00f8528dedcdac230c0e045cf
+DIST letter_opener-1.3.0.tar.gz 8811 SHA256 de4a7ee706a162d56b194fdba16e49b77efcce521fc027988adc1e787accaa3a SHA512 f0c05615d9e8c4425531dbab14ea65c7b3c53604131c2aa5c7988ec2fcbea4c5ab051b22dd87716cb77b431e2c8ee74a23ae99abf692ce1b02e26ea1afff241e WHIRLPOOL c1f315efda002231ec6638dc58b5abb873895722c8d719f21790b9c4298f8a3a191ba4b8846908bedcc8dda40b87167d354591e539c690396fababf41aaae6bb
 EBUILD letter_opener-1.2.0.ebuild 791 SHA256 d5b9fa794935b5e934316d081eb9fb7601a746a26d0af91cdd8f152120edb963 SHA512 d5c2c63eb6b88d63c9449b569a88f46611dae3601eb7dbc3ba57bc4085bf483fe06939f2a36c85b127582c7c83dcf86aab11d2524d4aa65a2887ad349ae47261 WHIRLPOOL 30d9b6e205d4403a17e1a11287cc3029f2fdcacf98eb2149dee183612fa8b82715b024e29553cb7c63279c6b1c14a86714704dd0548b7fcd0176439020c14350
-MISC ChangeLog 561 SHA256 7e1bde7d50186881e0410c683bb92d3726f3230423eb8fc8b5a843f9a77537be SHA512 a4a0fbd5bf346b46cb9b3891303ee5176fb48fd6dcdbf0566937194bcb3a3cfd8c1a93d8e1ffc67a2743f42dfa149044fddc59f8e508309ce97d31e7c7bc297f WHIRLPOOL 4794848884428fe3ecd288b56fa236c7a72fdcf033ae3379cebb6e0fc6e0e3621b5a36fea59092072dc13a301389168ace56e68f8733b2b6346a6d86014b195d
+EBUILD letter_opener-1.3.0.ebuild 916 SHA256 99b33e3b7d1ddcd3245e0244cb6229a70aa84abee02a39a9dc30311269777b30 SHA512 508ab7e56c8914387d75fe1c303b0a0652d42f8b7575ee556b93dea165dfe978b20d3ab819447be93abf8d71c93497bcc22df35fc42deaba7006cbf41a05b352 WHIRLPOOL a687ac5673f5b300448cf833147196560fa88e531d93a0b9cc941baea6a3e673f1259c80fc50fa784cd14a0a72c7faa66bfee19a748d322768a613e4be21dc2d
+MISC ChangeLog 719 SHA256 8d91672ab1da3db5cb2114556538f30eb14f90d6561aae26b853e8c529efc02d SHA512 25a2478492517bc7b14ced4cc656353f3c827ec71d9781e90d04bcbf17aff8a95b8cf28fd6fd56d013e08409ee4cc267f221f677199782cd8e7e556c6a7605ee WHIRLPOOL b42681e8348f52ae576f280f18917a4ef74853e91059e0a0cb290c71037e39e9c7f86e468d4e40b804eeb314a5f4f4ee7ee663b3800c19ed50ce634909eb8d6d
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlSL7JIACgkQiIP6VqMIqNdVnwD/dn+p2SC99IReQaGo2nwTIRSM
+7ZsGU6cC7rWoLVAwKWEBAIdwDCA1OOHFQbqZOaapG7HKs+AYpGmX9Gd3jhfMe5bx
+=920V
+-----END PGP SIGNATURE-----
