@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/letter_opener
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/letter_opener/ChangeLog,v 1.3 2014/10/11 02:44:02 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/letter_opener/ChangeLog,v 1.4 2014/12/13 07:36:44 graaff Exp $
+
+*letter_opener-1.3.0 (13 Dec 2014)
+
+  13 Dec 2014; Hans de Graaff <graaff@gentoo.org> +letter_opener-1.3.0.ebuild:
+  Version bump. Install correct gemspec.
 
   11 Oct 2014; Manuel Rüger <mrueg@gentoo.org> letter_opener-1.2.0.ebuild:
   Add ruby21 target.
